flux/apps/media/buildarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buildarr
  labels:
    app: buildarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: buildarr
  template:
    metadata:
      labels:
        app: buildarr
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - "1.1.1.1"
          - "8.8.8.8"
        searches:
          - media.svc.cluster.local
          - svc.cluster.local
          - cluster.local
      containers:
        - name: buildarr
          image: callum027/buildarr:latest
          args: ["daemon", "/config/buildarr.yml"]
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 128Mi
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config-template
          configMap:
            name: buildarr-config
        - name: config
          emptyDir: {}
