flux/apps/media/nzbget.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
  labels:
    app: nzbget
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nzbget
  template:
    metadata:
      labels:
        app: nzbget
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - "1.1.1.1"
          - "8.8.8.8"
        searches:
          - media.svc.cluster.local
          - svc.cluster.local
          - cluster.local
      containers:
        - name: nzbget
          image: lscr.io/linuxserver/nzbget:latest
          ports:
            - containerPort: 6789
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          configMap:
            name: nzbget-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
---
apiVersion: v1
kind: Service
metadata:
  name: nzbget
spec:
  selector:
    app: nzbget
  ports:
    - port: 80
      targetPort: 6789
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nzbget
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: websecure
  hostnames:
    - nzbget.apps.cluster1.internal.heidi.codes
  rules:
    - backendRefs:
        - name: nzbget
          port: 80
